@@ -10,6 +10,8 @@ partman-partitioning (65) UNRELEASED; urgency=low
     - Cope with rounding errors while asking for the new partition size; if
       the value we convert back from human-readable notation is in the
       round-off range at either end, just use the appropriate extreme.
+    - Use 'update-dev --settle' rather than 'update-dev' after resizing or
+      committing. Requires di-utils 1.66.
 
   [ Riku Voipio ]
   * Consolidate ARM partitioning.
